part kedua commit

--- a/index.html
+++ b/index.html
@@ -39,6 +39,43 @@
                  <img src="img/hero.svg" alt="" class="bg-1">
              </div>
          </section>
+
+         <!--part section 2 feture-->
+           <section class="features">
+               <div class="tittle-heading">
+                   <h1>Mengapa Memilih Bitcoin</h1>
+                   <p>Mulai atur strategimu</p>
+               </div>
+               <div class="row-3-col">
+                   <div class="col">
+                       <img src="img/time.svg" alt="">
+                       <h4>Analisa grafik</h4>
+                   </div>
+                   <div class="col">
+                    <img src="img/place.svg" alt="">
+                    <h4>dimana saja</h4>
+                </div>
+                <div class="col">
+                    <img src="img/waktu.svg" alt="">
+                    <h4>kapan saja</h4>
+                </div>
+               </div>
+           </section>
+
+           <!--part section 3 -->
+           <section class="typography">
+             <div class="img-typography">
+                 <img src="img/hero3.svg" alt="" >
+            </div>
+            <div class="text-typography">
+                <h1>Atur keuanganmu sekarang</h1>
+                <p>investasikan keuangan anda untuk masa depan.</p>
+                <button class="btn-primary">
+                    Yuk Mulai
+                </button>
+            </div>
+           </section>
+
     </div>
     
 </body>
